fix: fix number type

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     build: .
     container_name: webhook
     environment:
-      - TZ=Asia/Shanghai
       - GITLAB_TOKEN=b1946ac92492d2347c6235b4d2611184
       - JENKINS_TOKEN=b1946ac92492d2347c6235b4d2611184
     ports:
       - "127.0.0.1:1323:1323"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
